--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,23 @@
   "name": "catstronauts-server-complete",
   "version": "1.0.0",
   "description": "back-end demo app for Apollo's lift-off course",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "nodemon src/index"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --transpile-only --no-notify --exit-child src/index.ts",
+    "generate": "ts-node --transpile-only src/schema.ts"
   },
-  "dependencies": {},
+  "dependencies": {
+    "apollo-server": "^3.11.1",
+    "graphql": "^16.6.0",
+    "nexus": "^1.3.0"
+  },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "dotenv": "^8.6.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.9.3"
   },
   "author": "Raphael Terrier @R4ph-t",
   "license": "MIT",
